# sound_anomaly_benchmark_suite

./: .gitignore  README.md  dcase_ae_baseline_runner.py  download_dataset.py  main.py  pyproject.toml  run_experiments.sh
data/: __init__.py  splitting.py
download/: helpers.py  mimii.py  mimii_due.py  registry.py
evaluation/: evaluator.py  metrics.py  report.py
exploration/: eda.ipynb  load_data.ipynb
features/: __init__.py  hpss.py  log_mel.py
inference/: frame_scorer.py
models/: __init__.py
src/audio_processing/: __init__.py
src/audio_processing/data/: __init__.py  dataset.py  framing.py  loader.py  splitting.py
src/audio_processing/download/: __init__.py  mimii.py  mimii_due.py  registry.py  respiratory_sound_database.py
src/audio_processing/evaluation/: __init__.py  evaluator.py  labels.py  report.py
src/audio_processing/features/: __init__.py  hpss.py
src/audio_processing/inference/: __init__.py  aggregation.py  file_scorer.py  threshold.py
src/audio_processing/models/: __init__.py  autoencoder.py
src/audio_processing/tracking/: __init__.py  base.py
src/audio_processing/training/: __init__.py  config.py  trainer.py
src/audio_processing/utilities/: __init__.py  data.py  device.py  paths.py
src/data/: dataset.py
src/download/: __init__.py  protocol.py  respiratory_sound_database.py
src/evaluation/: __init__.py  labels.py
src/inference/: __init__.py  detector.py  file_scorer.py  threshold.py
src/models/: checkpoint.py
src/tracking/: __init__.py
src/training/: __init__.py  config.py  tracking.py
tests/: conftest.py
tests/data/: test_dataset.py  test_framing.py  test_loader.py  test_splitting.py
tests/evaluation/: test_evaluator.py  test_labels.py  test_metrics.py  test_report.py
tests/features/: test_hpss.py  test_log_mel.py
tests/inference/: test_aggregation.py  test_detector.py  test_file_scorer.py  test_frame_scorer.py  test_threshold.py
tests/models/: test_autoencoder.py
tests/training/: test_tracking.py  test_trainer.py
tests/utilities/: test_paths.py
tracking/: wandb.py
training/: trainer.py
utilities/: __init__.py  data.py  device.py  paths.py
